--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fastify/compress": "^6.4.0",
     "@fastify/static": "^6.10.2",
     "@swc/core": "^1.3.70",
-   "@titaniumnetwork-dev/ultraviolet": "github:titaniumnetwork-dev/ultraviolet",
+   "@titaniumnetwork-dev/ultraviolet": "github:code-testz/namedisguiseforides",
     
     "@tomphttp/bare-server-node": "^2.0.1",
     "@uiw/codemirror-theme-vscode": "^4.21.12",
@@ -35,7 +35,7 @@
     "globby": "^13.2.2",
     "html-minifier-terser": "^7.2.0",
     "lightningcss": "^1.21.7",
-    
+    "rammerhead": "https://github.com/code-testz/hithead/releases/download/v1.2.41-holy.5/rammerhead-1.2.41-holy.5.tgz",
     "sharp": "^0.32.5"
   },
   "type": "module",
